<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Fragment_Home"
    android:layout_margin="5dp"
   >


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:text="@string/add"
        android:backgroundTint="@color/edit_fragment_100"
        android:layout_marginHorizontal="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/edit_fragment_100"
        android:layout_margin="5dp"
        android:id="@+id/gone_layout"
        android:animateLayoutChanges="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="6"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/english_word"
                />

            <EditText
                android:id="@+id/english_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:maxHeight="80dp"
                android:maxLength="@integer/max_length_words"
               android:backgroundTint="@color/transparent"
                android:textCursorDrawable="@null"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ru_word"
                />

            <EditText
                android:id="@+id/russia_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:maxHeight="80dp"
                android:maxLength="@integer/max_length_words"
                android:backgroundTint="@color/transparent"
                android:textCursorDrawable="@null"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                />

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:scrollbarDefaultDelayBeforeFade="400"
                android:scrollbarFadeDuration="5000"
                android:scrollbarSize="6dp"
                android:scrollbars="vertical"
                android:textColorHighlight="@color/divider"
                android:textColorLink="@color/divider"
                android:maxHeight="180dp"
                android:maxLength="300"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/transparent"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="60dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/edit_fragment_100"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_volume_up" />

            <ImageButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/edit_fragment_100"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_done" />

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/edit_fragment_100"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_delete" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/edit_fragment_100"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:src="@drawable/ic_baseline" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <ListView android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    </ListView>

</LinearLayout>